--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   backend:
     container_name: mancala-backend
     build: ./
-    image: bolcom/mancala-backend
+    image: jurengis/mancala-backend
     ports:
       - "8080:8080"
     environment:
@@ -11,6 +11,6 @@ services:
   frontend:
     container_name: mancala-frontend
     build: ./src/main/frontend
-    image: bolcom/mancala-frontend
+    image: jurengis/mancala-frontend
     ports:
       - "3000:3000"
