--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bol</groupId>
+	<groupId>com.jurengis</groupId>
 	<artifactId>mancala</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mancala-game</name>
