--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,4 +1,4 @@
-bol:
+jurengis:
   com:
     mancala:
       cors:
@@ -12,4 +12,4 @@ spring:
 logging:
   level:
     com:
-      bol: debug
+      jurengis: debug
